--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,5 @@ repositories {
 
 dependencies {
     compile "com.facebook.react:react-native:+"
-    compile (name: "xwalk_core_library-22.52.561.4", ext: "aar")
+    compile (name: "xwalk_core_library_23-input-patch", ext: "aar")
 }
